# jetson-video

./: CMakeLists.txt  CMakePreBuild.sh  Camera.cpp  Camera.h  README.md
cuda/: cudaCrop.cu  cudaCrop.h  cudaDebayer.cu  cudaDebayer.h  cudaMath.h  cudaNormalize.cu  cudaResize.cu  cudaUtility.h  cudaYUV-NV12.cu  cudaYUV-YUYV.cu  cudaYUV-YV12.cu
gstreamer/: gstCamera.cpp  gstCamera.h
gstreamer/gst-camera/: CMakeLists.txt
v4l2/: v4l2Camera.cpp  v4l2Camera.h
v4l2/v4l2-console/: CMakeLists.txt  v4l2-console.cpp
v4l2/v4l2-display/: CMakeLists.txt  v4l2-display.cpp
